<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_back"
    android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:background="@drawable/bg_bor"
            android:weightSum="5"
            android:orientation="horizontal">



            <LinearLayout
                android:id="@+id/back_lv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="left"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:background="@drawable/whiteback_arrow"/>
            </LinearLayout>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="-35dp"
                    android:textSize="@dimen/_20sdp"
                    android:textColor="@color/background_white_color"
                    android:text="@string/registertitle"/>
            </LinearLayout>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">


            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_5sdp">

                <EditText
                    android:id="@+id/fname_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="First Name"
                    android:imeOptions="actionNext"
                    android:textColorHint="@color/greyblack"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    android:paddingRight="@dimen/_10sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:textColor="#000000"
                    android:textSize="@dimen/_13sdp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/grey">

                </View>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:paddingLeft="@dimen/_5sdp">

                <EditText
                    android:id="@+id/lname_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="Last Name"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences"
                    android:textColorHint="@color/greyblack"
                    android:maxLines="1"
                    android:paddingRight="@dimen/_10sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:textColor="#000000"
                    android:textSize="@dimen/_13sdp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/grey">

                </View>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:paddingLeft="@dimen/_5sdp">

                <EditText
                    android:id="@+id/email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="Email"
                    android:textColorHint="@color/greyblack"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingRight="@dimen/_10sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:textColor="#000000"
                    android:textSize="@dimen/_13sdp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/grey">

                </View>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_ph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:paddingLeft="@dimen/_5sdp">

                <EditText
                    android:id="@+id/t5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="Password"
                    android:imeOptions="actionDone"
                    android:textColorHint="@color/greyblack"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingRight="@dimen/_10sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:textColor="#000000"
                    android:textSize="@dimen/_13sdp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/grey">

                </View>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:defaultCode="91"
                    android:layout_marginTop="@dimen/_5sdp"
                    app:previewNameCode="IN"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/phone_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="Mobile Number"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLines="1"
                        android:paddingRight="@dimen/_10sdp"
                        android:paddingTop="@dimen/_5sdp"
                        android:textColor="#000000"
                        android:textSize="@dimen/_13sdp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@color/grey">
                    </View>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/country_spn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="-10dp"
                    android:layout_marginLeft="-10dp">

                </Spinner>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey">
                </View>
            </LinearLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_agent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:paddingLeft="@dimen/_5sdp">

                <EditText
                    android:id="@+id/agent_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="Enter Agent Referal Code  (not mandatory)"
                    android:imeOptions="actionDone"
                    android:inputType="textCapCharacters"
                    android:maxLength="6"
                    android:textColorHint="@color/greyblack"
                    android:maxLines="1"
                    android:paddingRight="@dimen/_10sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:textColor="#000000"
                    android:textSize="@dimen/_13sdp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/grey">
                </View>
            </android.support.design.widget.TextInputLayout>




        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:gravity="center">


            <com.wang.avi.AVLoadingIndicatorView
                android:id="@+id/avi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_marginTop="@dimen/_50sdp"
                app:indicatorColor="@color/orange"
                app:indicatorName="BallSpinFadeLoaderIndicator"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:background="@drawable/btn_bg">



                <TextView
                    android:id="@+id/submit_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_5sdp"
                    android:padding="@dimen/_10sdp"
                    android:drawableLeft="@drawable/login_icon"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/submit"
                    android:textColor="@color/background_white_color"
                    android:textSize="@dimen/_15sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/content_tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_5sdp"
                    android:gravity="center"
                    android:text="@string/content_warning"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/_12sdp" />


                <TextView
                    android:id="@+id/content_tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_5sdp"
                    android:textStyle="italic"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:gravity="center"
                    android:text="@string/content_warning2"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>
        </LinearLayout>



</LinearLayout>